<resources>
    <string name="file_read_and_write_permissions">File read and write permissions</string>
    <string name="access_internal_storage">访问内部存储</string>
    <string name="access_external_storage_private_directory">访问外部存储私有目录</string>
    <string name="access_external_storage_public_directories">访问外部存储公共目录</string>
    <string name="saf">SAF</string>
    <string name="select_single_image">选择单张图片</string>
    <string name="select_single_video">选择单个视频</string>
    <string name="photograph">拍照</string>
    <string name="system_album">系统相册</string>
    <string name="custom_selection_album">自定义选择相册</string>
    <string name="shot">拍摄</string>
    <string name="custom_select_video">自定义选择视频</string>
</resources>